pl 14.hwn1
	- specialize duration.cc for lily, move out of lib/
	- stem cleanup
	- more SCM typechecking
	- stafflineleading -> staff_space
	- bf: rod distances.
	- junk some unused code.
	
pl 13.hwn2
	- paper/score column cleanups. Junk Score_column type

pl 13.hwn1
	- Bezier_bow/Bezier cleanups
	- bf: rest under beam.
	
pl 13.jcn2
	- untangled Chord_name (item) and Chord (list-of-pitches)
	
pl 13.jcn1
	- bezier-bow fix

***********
pl 12.hwn1
	- polynomial.hh
	- bf: generic properties
	- quantise_iv () fix.
	- bezier cleanup
	- class Polynomial 
	- use smobs for font metric tables/hashes.
	- nl.po bf

************

pl 11.jcn3
	- small beam fixes (interstaff knees still broken)

pl 11.hwn1
	- bf: dots
	- bf: harmonic note heads
	- revise stem, notehead, rest

pl 11.jcn2
 	- included missing scm,ly updates
	- bf: urg to_dir () takes scm..
	- bf's: if (Foo b = bar != 1)
	- beam cleanup

************
pl 10.uu1
	- various small bfs
	- bf: alignment reversed
	- Staff_symbol_referencer -> Staff_symbol_referencer_interface
	- bf: staccato pos
	- Knee fixes (thanks, Jan)

pl 10.jcn2
	- fixes for invisible beamed stems
	- removed steminfo from properties, don't cache Stem_info

pl 10.jcn1
	- steminfo to properties
	- dropped internote dim for stem-beams

**********
pl 9.hwn1
	- abstracting Staff_symbol_referencer to an interface.
	- quantised_position for staccato dots.
	- standchen fixes
	- junk Score_element::do_{width,height}: set callbacks directly.
	- merge Score_element, Graphical_element
	- merge Axis_group_element, Graphical_axis_group
	- junk pointer fields fromScore_element derived classes
	- junk obsolete do_substitute_dependency code.

**********

pl 8.hwn2
	- staff-support for Crescendi.
	- padding for accidentals.
	- cascading offset callbacks

pl 8.hwn1
	- note-head-side 
	- naming Staff_sidify -> Side_position_interface

***********

pl 7.mb1
	- bf: timeSignatureStyle works again

pl 7.hwn1
	- Dirk Latterman key/mmrest patches