@@ -197,6 +197,7 @@ index_set_cell (SCM s, Direction d, SCM v)
   return s;
 }
   
+#if 0
 SCM
 array_to_list (SCM *a , int l)
 {
@@ -207,6 +208,7 @@ array_to_list (SCM *a , int l)
     }
   return list;
 }
+#endif
 
 SCM
 ly_warning (SCM str)
